// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`poly hotspot choice > rendering > renders poly elements with given coords 1`] = `
<svg
  version="1.1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    aria-disabled="false"
    class="shape poly"
    role="button"
    tabindex="-1"
  >
    <polygon
      class="shape-shadow"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-inner-border"
      clip-path="url(#SvgjsClipPath1000)"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-outer-border"
      clip-path="url(#SvgjsClipPath1000)"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-dashed-outline"
      clip-path="url(#SvgjsClipPath1000)"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-outline-cover"
      clip-path="url(#SvgjsClipPath1000)"
      points="100,100 400,600 100,800 0,150"
    />
    <circle
      class="shape-checkmark"
      cx="207.421875"
      cy="556.640625"
      r="5"
    />
  </g>
  
  
  <defs>
    <clippath
      id="SvgjsClipPath1000"
    >
      <polygon
        points="100,100 400,600 100,800 0,150"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`poly hotspot choice > rendering > renders text label as a checkmark if label is set 1`] = `
<svg
  version="1.1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    aria-disabled="false"
    class="shape poly selected with-label"
    role="button"
    tabindex="-1"
  >
    <polygon
      class="shape-shadow"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-inner-border"
      clip-path="url(#SvgjsClipPath1002)"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-outer-border"
      clip-path="url(#SvgjsClipPath1002)"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-dashed-outline"
      clip-path="url(#SvgjsClipPath1002)"
      points="100,100 400,600 100,800 0,150"
    />
    <polygon
      class="shape-outline-cover"
      clip-path="url(#SvgjsClipPath1002)"
      points="100,100 400,600 100,800 0,150"
    />
    <text
      class="shape-checkmark"
      x="205.921875"
      y="555.140625"
    >
      <tspan
        dy="0"
        x="205.921875"
      >
        1
      </tspan>
    </text>
  </g>
  
  
  <defs>
    <clippath
      id="SvgjsClipPath1002"
    >
      <polygon
        points="100,100 400,600 100,800 0,150"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`poly hotspot choice > rendering > renders thin polygons with another style 1`] = `
<svg
  version="1.1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    aria-disabled="false"
    class="shape poly thin-poly"
    role="button"
    tabindex="-1"
  >
    <polygon
      class="shape-outer-border"
      clip-path="url(#SvgjsClipPath1003)"
      points="10,10 20,10 20,110 10,110"
    />
    <polygon
      class="shape-dashed-outline"
      clip-path="url(#SvgjsClipPath1003)"
      points="10,10 20,10 20,110 10,110"
    />
    <polygon
      class="shape-outline-cover"
      clip-path="url(#SvgjsClipPath1003)"
      points="10,10 20,10 20,110 10,110"
    />
    <polygon
      class="shape-inner-border"
      points="10,10 20,10 20,110 10,110"
    />
    <circle
      class="shape-checkmark"
      cx="15"
      cy="60"
      r="5"
    />
  </g>
  
  
  <defs>
    <clippath
      id="SvgjsClipPath1003"
    >
      <polygon
        points="10,10 20,10 20,110 10,110 10,10 -9,12 12,12 12,-9 -9,-9 -9,12"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`poly hotspot choice > rendering > renders with no props 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    aria-disabled="false"
    class="shape poly"
    role="button"
    tabindex="-1"
  />
  
  
</svg>
`;
